--- a/backend/UserManagement.Api/UserManagement.Api.csproj
+++ b/backend/UserManagement.Api/UserManagement.Api.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UserManagement.Core\UserManagement.Core.csproj" />
+    <ProjectReference Include="..\UserManagement.Repository\UserManagement.Repository.csproj" />
     <ProjectReference Include="..\UserManagement.Service\UserManagement.Service.csproj" />
   </ItemGroup>
 
